# yacc

./: .gitignore  README.md  app.py  device.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml  win_build.yml
announcement/: release_note.md
scripts/: linux_build.sh  win_build.bat
yacc/: app.py  device.py  gui.py  yacc.py
