[project]
name = "yacc"
dynamic = ["version"]
description = "Yet Another CANopen Configurator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "canopen==2.3.0",
    "tomli==2.0.1;python_version<'3.11'",
    "tomli_w==1.0.0",
    "uptime==3.0.1",
    "tqdm==4.66.5",
]

[project.optional-dependencies]
develop = [
    "black",
    "pylint",
]
build = [
    "pyinstaller",
]

[project.urls]
"Homepage" = "https://github.com/setteZ/yacc"
"Bug Reports" = "https://github.com/setteZ/yacc/issues"
"Source" = "https://github.com/setteZ/yacc/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "yacc/__init__.py"
